add some image styling

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 
             <hr>
 
+            <h3>Images</h3>
+
+            <div class="card m-bottom-xl">
+                <img src="assets/img/riggs.jpg">
+            </div>
+
             <h3>Typography</h3>
 
             <div class="card m-bottom-xl">
