add image styl file and update default variables

--- a/index.html
+++ b/index.html
@@ -410,6 +410,103 @@
                     <h1>Hero Heading</h1>
                 </div>
             </div>
+
+            <h3>Grid</h3>
+            <div class="card m-bottom-xl">
+                <div class="row m-bottom-large">
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                    <div class="cell-12">
+                        <div class="primary text-white p-base center">Cell 12</div>
+                    </div>
+                </div>
+
+                <div class="row m-bottom-large">
+                    <div class="cell-6">
+                        <div class="primary text-white p-base center">Cell 6</div>
+                    </div>
+                    <div class="cell-6">
+                        <div class="primary text-white p-base center">Cell 6</div>
+                    </div>
+                    <div class="cell-6">
+                        <div class="primary text-white p-base center">Cell 6</div>
+                    </div>
+                    <div class="cell-6">
+                        <div class="primary text-white p-base center">Cell 6</div>
+                    </div>
+                    <div class="cell-6">
+                        <div class="primary text-white p-base center">Cell 6</div>
+                    </div>
+                    <div class="cell-6">
+                        <div class="primary text-white p-base center">Cell 6</div>
+                    </div>
+                </div>
+
+                <div class="row m-bottom-large">
+                    <div class="cell-3">
+                        <div class="primary text-white p-base center">Cell 3</div>
+                    </div>
+                    <div class="cell-3">
+                        <div class="primary text-white p-base center">Cell 3</div>
+                    </div>
+                    <div class="cell-3">
+                        <div class="primary text-white p-base center">Cell 3</div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="cell-2">
+                        <div class="primary text-white p-base center">Cell 2</div>
+                    </div>
+                    <div class="cell-2">
+                        <div class="primary text-white p-base center">Cell 2</div>
+                    </div>
+                </div>
+            </div>
+            <strong>Markup</strong>
+            <pre>
+                <code>
+                    &lt;div class="row"&gt;
+                        &lt;div class="cell-2"&gt;
+                            ...
+                        &lt;/div&gt;
+                        &lt;div class="cell-2"&gt;
+                            ...
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                </code>
+            </pre>
         </div>
 
         <div style="display: none">
