--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h3>Images</h3>
 
             <div class="card m-bottom-xl">
-                <img src="assets/img/riggs.jpg">
+                <img src="//placehold.it/1920x1080">
             </div>
 
             <h3>Typography</h3>
@@ -369,6 +369,9 @@
             <div class="card m-bottom-xl">
                 <div class="button-group">
                     <input type="search" placeholder="Button Group Input">
+                    <button class="button button-gray">
+                        <span>Search</span>
+                    </button>
                     <button class="button button-gray">
                         <span>Search</span>
                     </button>
