--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="" style="background: #000; color: #41C632;">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <pre>
+        <pre style="display: flex; align-items: center; justify-content: center;">
             <code>
                        .^~7?JYYYJ?!^.                                                         
                   .~?5B#&@@@@@@@@@@@#GJ^                                                      
